k8s/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: service-catalog-v2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: service-catalog-v2
  name: service-catalog-v2
  namespace: service-catalog-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-catalog-v2
  template:
    metadata:
      labels:
        app: service-catalog-v2
    spec:
      containers:
        - name: service-catalog-v2
          imagePullPolicy: Always
          image: 508359375583.dkr.ecr.eu-west-1.amazonaws.com/utopikai-service-catalog:v2
          ports:
            - containerPort: 80
              hostPort: 80
              protocol: TCP
          resources:
            requests:
              memory: "50Mi"
              cpu: "50m"
            limits:
              memory: "100Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: service-catalog-v2
  name: service-catalog-v2-srv
  namespace: service-catalog-v2
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: service-catalog-v2
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-catalog-v2
  namespace: service-catalog-v2
  annotations:
    alb.ingress.kubernetes.io/group.name: utopikai-rag-dev
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:508359375583:certificate/7afcc1e9-7ed2-4cf2-91d7-c1bd925e9e09
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/tags: Name=loadbalancer-dev-security-group, Env=dev, App=utopikai-rag
spec:
  ingressClassName: alb
  rules:
    - host: service-catalog-v2.utopikai-dev.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-catalog-v2-srv
                port:
                  number: 80
